wp-content/themes/kadence-child/assets/css/main.css
:root {
  --font-size-news-base: 1.125rem;
}
/**
 * MARK: Overrides & Fixes
 */

.has-theme-palette-3-color {
  a {
    color: var(--wp--preset--color--theme-palette-3) !important;
    text-decoration: underline !important;
    &:focus,
    &:hover {
      color: var(--global-palette4) !important;
      text-decoration: none !important;
    }
  }
}

.kb-btns64_1cecc5-78 {
  gap: 1.25rem 1.5rem;
}

.wp-block-kadence-slider {
  .kb-splide .splide__arrows button.splide__arrow {
    background-color: rgba(255,255,255, .5);
    opacity: 1 !important;
    transition: all .25s ease-in-out;
    &:focus,
    &:hover {
      background-color: rgba(255,255,255, .85);
    }
  }
}

/**
 * MARK: Aktuelles 
 */

.kadence-column64_98fa6f-c1 > .kt-inside-inner-col {
  position: relative;
}
.button-start-blog-container {
  aspect-ratio: 1 / 1;
  font-size: 1rem;
  height: auto;
  position: absolute;
  right: 100px;
  top: 10px;
  width: 80px;
  z-index: 10;
  a {
    align-items: center;
    background-color: var(--global-palette3);
    /* background-color: var(--global-palette1); */
    /* background-color: red; */
    border-radius: 100%;
    color: var(--global-palette2);
    display: flex;
    font-family: 'Campton Bold';
    font-weight: 400;
    height: 100%;
    justify-content: center;
    line-height: 1;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    transform: rotate(-16deg);
    transition: all .25s ease-in-out;
    width: 100%;
    &::before {
      background-image: url(../img/borders/border-button-circle.svg);
    background-position: 50% 50%;
    background-repeat: no-repaet;
    background-size: contain;
      border-radius: 100%;
      content: '';
      display: block;
      height: calc(100% + 10px);
      position: absolute;
      width: calc(100% + 10px);
      z-index: 2;
    }
    &:focus,
    &:hover {
      background-color: var(--global-palette1);
      /* background-color: var(--global-palette3); */
      transform: rotate(0deg);
    }
    .inner {
      span {
        color: black;
        display: block;
      }
      span:last-child {
        color: var(--global-palette2)
      }
    }
    
  }
}

a.news-blog-link {
  background: var(--global-palette1) !important;
  color: var(--global-palette2) !important;
  &:focus,
  &:hover {
    background: var(--global-palette2) !important;
    color: var(--global-palette1) !important;
  }
}

.blog-heading-container {
  align-self: flex-start;
  background-image: url(../img/borders/border-landscape-lime-blog-heading.svg);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: 0 50%;
  box-sizing: border-box;
  margin-block-end: .5rem;
  padding: 2rem 0 2rem 1.5rem;
  width: 100%;
  .blog-heading {
    font-size: clamp(0.49em, 6.8vw, 120px);
    span {
      display: block;
      &:last-child {
        color: var(--global-palette2);
      }
    }
  }
}

.news-blog,
.category-aktuelles {
  .wp-block-post-excerpt__more-link,
  .entry-footer a {
    background: var(--global-palette-btn-bg);
    color: var(--global-palette1);
    font-family: 'Campton Bold';
    font-weight: 400;
    text-decoration: none;
    text-transform: uppercase;
    padding: .5em 2em;
    margin-block-start: 0;
    mask-image: url(../img/borders/border-lila-button.png);
    mask-size: 100% 100%;
    &:focus,
    &:hover {
      background: var(--global-palette-btn-bg-hover);
      color: var(--global-palette2);
    }
  }
}

.kb-row-layout-wrap .kt-row-column-wrap:has(.news-blog) {
  padding-block-start: 4rem;
}

.kt-inside-inner-col:has(.news-blog) {
  padding-block-start: 0 !important;
}

.news-blog {
  .is-layout-grid.columns-3 {
    gap: 2rem;
  }
  .wp-block-post {
    display: flex;
    flex-direction: column;
  }
  .wp-block-post-featured-image {
    aspect-ratio: 3 / 2;
    margin-block: 0 var(--font-size-news-base) !important;
    -webkit-mask-image: url(../img/borders/border-news-image-small.svg);
    mask-image: url(../img/borders/border-news-image-small.svg);
    -webkit-mask-size: contain;
    mask-size: contain;
    -webkit-mask-repeat: no-repeat;
    mask-repeat: no-repeat;
    -webkit-mask-position: center center;
    mask-position: center center;
    overflow: hidden;
  }
  .wp-post-image {
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
  }
  .wp-block-post-title {
    color: var(--global-palette2);
    font-size: calc(var(--font-size-news-base) * 1.5) !important;
    hyphens: auto;
    margin-block: var(--font-size-news-base) !important;
  }
  .wp-block-post-excerpt {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    font-size: var(--font-size-news-base) !important;
    p {
      font-size: var(--font-size-news-base) !important;
    }
  }
  .wp-block-post-excerpt__excerpt {
    margin-block-end: var(--font-size-news-base) !important;
  }
  .wp-block-post-excerpt__more-text {
    margin-block-start: auto;
  }
  .wp-block-query-pagination {
    border-top: 1px solid var(--global-gray-500);
    justify-content: center;
    margin-block-start: 3rem;
    padding-block-start: 1rem;
  }
}

.kadence-thumbnail-position-behind:has(+ .category-aktuelles) {
  margin-bottom: 1rem;
}

.wp-site-blocks .post-thumbnail {
  height: auto !important;
  padding: 0 !important;
  aspect-ratio: 16 / 9;
  margin-block-start: 1.5rem;
  -webkit-mask-image: url(../img/borders/border-news-image-hero-16-9.svg);
  mask-image: url(../img/borders/border-news-image-hero-16-9.svg);
  -webkit-mask-size: contain;
  mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center center;
  mask-position: center center;
}

.category-aktuelles {
  border-radius: 1px !important;
  .entry-content-wrap {
    padding-block-start: calc(var(--font-size-news-base) * 1.25);
  }
  .entry-title {
    color: var(--global-palette2);
    font-size: calc(var(--font-size-news-base) * 1.5) !important;
    hyphens: auto;
  }
  .entry-content {
    font-size: var(--font-size-news-base) !important;
    .wp-block-heading {
      color: var(--global-palette2);
      font-size: var(--font-size-news-base) !important;
      margin-block:  calc(var(--font-size-news-base) * 2) var(--font-size-news-base) !important;
    }
    p {
      font-size: var(--font-size-news-base) !important;
      margin-block-end: var(--font-size-news-base);
    }
  }
  .entry-footer {
    margin-block-start: 2rem;
    text-align: center;

  }
  + .navigation  {
    border-top: 1px solid var(--global-gray-500);
    padding-block-start: 1rem;
  }
}

@media(min-width: 480px) {
  .button-start-blog-container {
    right: 20px;
    top: 100px;
  }
  .blog-heading-container {
    margin-block-end: 1rem;
  }
}

@media(min-width: 600px) {
  .button-start-blog-container {
    font-size: 1.25rem;
    width: 100px;
  }
  .blog-heading-container {
    margin-block-end: 1.5rem;
    padding-inline-start: 3rem;
    h2 {
      line-height: .9;
    }
  }
  .news-blog {
    .is-layout-grid.columns-3 {
      gap: 3rem 2rem;
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
  }
  .category-aktuelles {
    .entry-title {
      font-size: calc(var(--font-size-news-base) * 2) !important;
    }
  }
}

@media(min-width: 900px) {
  .button-start-blog-container {
    font-size: 1.5rem;
    width: 130px;
  }
  .kadence-thumbnail-position-behind:has(+ .category-aktuelles) {
    margin-bottom: -4.3em;
  }
}

@media(min-width: 1025px) {
  .button-start-blog-container {
    left: 50%;
    right: auto;
    top: 80px;
  }
}

@media(min-width: 1200px) {
  :root {
    --font-size-news-base: 1.25rem;
  }
  .button-start-blog-container {
    font-size: 2rem;
    width: 150px;
  }
  .kb-row-layout-wrap .kt-row-column-wrap:has(.news-blog) {
    padding-block-start: 6.5rem;
  }
  .blog-heading-container {
    margin-block-end: 2rem;
  }
  .news-blog {
    .is-layout-grid.columns-3 {
      gap: 3.5rem 2.5rem;
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
  }
}

@media(min-width: 1440px) {
  .button-start-blog-container {
    font-size: 2.25rem;
    width: 175px;
  }
  .news-blog {
    .is-layout-grid.columns-3 {
      gap: 4rem 3.5rem;
    }
  }
  .category-aktuelles {
    .entry-title {
      font-size: calc(var(--font-size-news-base) * 2.25) !important;
    }
  }
}

@media(min-width: 2000px) {
  :root {
    --font-size-news-base: 1.375rem !important;
  }
  .button-start-blog-container {
    font-size: 2.5rem;
    width: 200px;
  }
}

